# state_machine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
inc/: conf.h  linked_list.h  state_machine.h  types.h
src/: CMakeLists.txt  linked_list.c  state_machine.c
test/: CMakeLists.txt  assert.h  linked_list_test.c  state_machine_test.c
